examples/good/13-02-static-binding-functions.lagger
int f(){
    println(0);
    return 0;
}

int g(){
    return f();
}

int main(){

    int f(){
        println(42);
        return 1;
    }

    return g();
}