examples/bad/01-01-invalid-type.lagger
int main(){
    integer a = 1;
    return 0;
}